<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
      android:layout_marginTop="15dp"
        android:background="@drawable/searchback">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/todo"
            android:src="@drawable/back" />

        <EditText
            android:id="@+id/Search"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/backButton"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="70dp"
            android:text="@string/line"
            android:textColor="#E9020202"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/micButton"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/todo"
            android:onClick="btnSpeech"
            android:src="@drawable/mic" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:text="Recent Searches"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/white"
            android:text="clear"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:textAllCaps="true"/>
    </RelativeLayout>
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/noResult"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/noresult"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/categoryRecyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
       tools:listitem="@layout/history_recyclerview"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/different_category"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spanCount="3"
        tools:listitem="@layout/category_recyclerview"/>


</LinearLayout>