<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/home_Layout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:title="Online Book App"
                app:titleMarginStart="40dp">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:id="@+id/profile_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/profile"
                        app:civ_border_color="#FF9800"
                        app:civ_border_width="2dp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/gradient_search"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/Search_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/search" />

                <TextView
                    android:id="@+id/Search_text"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/Search_icon"
                    android:hint="@string/search"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="60dp"
                    android:text="@string/line"
                    android:textAlignment="textStart"
                    android:textColor="#E9575454"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/mic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:onClick="btnMic"
                    android:src="@drawable/mic" />
            </RelativeLayout>


        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/PosterRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PosterRecyclerview"
                    android:text="Top Authors"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/AuthorRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/divider"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp" />
                <TextView
                    android:id="@+id/dividerPoPuLer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/AuthorRecyclerView"
                    android:text="Populer Books"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/PopularRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/dividerPoPuLer"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp"
                    android:layout_marginBottom="50dp"/>






            </RelativeLayout>
        </ScrollView>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottommenu" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</RelativeLayout>